--- a/02-autograd/report/lab2_autograd_team4.bib
+++ b/02-autograd/report/lab2_autograd_team4.bib
@@ -13,3 +13,11 @@
   url      = {https://doi.org/10.1093/imanum/draa038},
   eprint   = {https://academic.oup.com/imajna/article-pdf/41/4/2311/40758053/draa038.pdf}
 }
+
+@other{mnist,
+  title   = {The MNIST database of handwritten digits},
+  journal = {},
+  author  = {LeCun, Yann},
+  url     = {http://yann.lecun.com/exdb/mnist/},
+  year    = {1998}
+}
